# hdruk_avoidable_admissions

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  Pipfile  README.md  environment.yml  index.html  init.bat  init.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_mkdocs.yml
admitted_care_pipeline_example/: index.html
avoidable_admissions/: __init__.py
avoidable_admissions/data/: __init__.py  nhsdd.py  nhsdd_snomed.py  validate.py
avoidable_admissions/features/: __init__.py  admitted_care_features.py  build_emergency_care_features.py  build_features.py  emergency_care_features.py  feature_maps.py
avoidable_admissions/utils/: FHIRTerminologyUtilites.py  nhsdd_generator.py
data_analysis/: readme.md
data_extraction/: extraction.ipynb
data_extraction/synthetic_data/: hdruk_acute_admissions_basic_synthetic.csv
data_harmonization/: harmonization-part1.ipynb
docs/: Makefile  admitted_care_pipeline_example.md  conf.py  features.md  index.md  index.rst  make.bat  pipeline.md  validate.md  validation.md
docs/code/: code.md
features/: index.html
modules/api/: main.py  (+4 more)
notebooks/: build_emergency_care_features.ipynb  extract_nhsdd_mappings.ipynb  final_admitted_care.ipynb  final_ed_care.ipynb  vc_feature_engineering.ipynb
pipeline/: index.html
reports/: vc_feature_engineering_2023_02_01.html
schema/: index.html
search/: search_index.json
validation/: index.html
(+10 files in other folders)
